# mdfluids

./: README.md  environment.yml  setup.cfg
mlfluids/: __init__.py
mlfluids/console/: console.py
mlfluids/fluid/: __init__.py  fluid.py  phases.py  properties.py  refprop_config.py
mlfluids/utils/: registry.py
test/: automl.ipynb  test_props.py
