[metadata]
name = mlfluids
version = attr: mlfluids.VERSION
description = BFLUIDS: Transport Property Prediction with Molecular Dynanmics and Machine Learning
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    black
    rich
    pyfluids
    ctREFPROP
    pydantic>=2.11
    numpy>=1.26.4
    scipy>=1.11.4
    pandas>=2.1.4
    scikit-learn>=1.4.2
    pycaret>=3.3.2
    matplotlib>=3.7.3
    matplotlib-label-lines>=0.7.0
    scienceplots>=2.1.1
